<resources>
    <string name="app_name">Unlost</string>
    <string name="google_client_id">290986483284-3vbmqp3ag3ldegnnijo6r4bqctmlp51g.apps.googleusercontent.com</string>
    <string name="action_sign_in">Sign in to Unlost</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_and_email">Welcome %s\nEmail: %s</string>
    <string name="welcome_to_unlost">Welcome to Unlost!</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="log_on">Log On</string>
    <string name="sign_up">Sign Up</string>
    <string name="camera">Camera</string>
    <string name="todo">TODO</string>
    <string name="myitems">My items</string>
    <string name="scanme">Scan QR</string>
    <string name="chat">Chat</string>
    <string name="add_new_item">Add new item…</string>
    <string name="item_activity_title">Your Items</string>
    <string name="settings_icon_name">Settings</string>
    <string name="search_item">Search</string>
    <string name="search_item_hint">Search item name…</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="use_cache">Use cache</string>
    <string name="permissions">Permissions</string>
    <string name="night_mode">Night mode</string>
    <string name="action_settings">settings</string>
    <string name="settings">Settings</string>
    <string name="add_item">Enter the ID located on the tag you found…</string>
    <string name="report_item">Report</string>
    <string name="Icon_for_item">desc_item_icon</string>
    <string name="my_items_temp_button">My Items (demo)</string>
    <string name="spinnerTypeDescriptor">Type</string>
    <string name="choose_a_type_text">Choose a type</string>
    <string name="item_name">Name</string>
    <string name="new_item_text">New Item</string>
    <string name="item_description">Description</string>
    <string name="required">required</string>
    <string name="itemName">Name</string>
    <string name="optional">optional</string>
    <string name="addButton">Add</string>
    <string name="added_on">Added On:</string>
    <string name="owner">Owner</string>
    <string name="device_name">Name</string>
    <string name="last_location">Last Location</string>
    <string name="chat_menu_label">My Conversations</string>
    <string name="chat_entry_profilepic">Profile picture</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="register_now">Register Now</string>
    <string name="receiver">Receiver</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="is_lost">Is Lost</string>
    <string name="send_localisation">Send localisation</string>
    <string name="report_button_text">REPORT</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">Weather</string>
    <string name="fcm_message">FCM Message</string>
    <string name="unlost_logo_description">Unlost logo</string>
    <string name="send_image">Send image</string>
    <string name="send_image_via_camera">Send image via camera</string>
    <string name="deleteAudio">deleteAudio</string>
    <string name="sendAudio">sendAudio</string>
    <string name="RecordingAudio">Recording ...</string>
    <string name="demo_text">DEMO</string>
    <string name="profile_picture">Profile picture</string>
    <string name="load_profile_picture">Load from gallery</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="change">change</string>
    <string name="imagesent">ImageSent</string>
    <string name="sender">Sender</string>
    <string name="long_message">Hi, this is a very very long message that should be wrapped!</string>
    <string name="timestamp_example">220317133700</string>
    <string name="profile_picture_description">Profile picture</string>
    <string name="location">location</string>
    <string name="qr_code">Qr Code</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="content_description_close">ez</string>
    <string name="map">Map</string>
    <string name="fullscreen_description">Image displayed in fullscreen</string>
    <string name="add_with_nfc">ADD WITH NFC</string>
    <string name="title_activity_qr_code_show">Your Item\'s QRCode</string>
    <string name="title_activity_map">Your Items\' Last Positions</string>
    <string name="title_activity_add_item">Add a New Item</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_image">Image</string>
    <string name="title_register_user">Register</string>
    <string name="title_activity_profile_picture">Set A New Profile Picture</string>
    <string name="title_activity_scan_qr_code">Scan A QRCode</string>
    <string name="title_activity_nfc">Scan an NFC Tag</string>
    <string name="title_activity_item_information">Item Information</string>
    <string name="title_navigation_to_item_activity">Navigate To Your Item</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About us</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy</string>
    <string name="help_icon_desc">help_icon</string>
    <string name="privacy_icon_desc">privacy_icon</string>
    <string name="qr_found_btn_txt">I found a QR tag !</string>
    <string name="nfc_found_btn_txt">I found a NFC tag !</string>
    <string name="logo_desc">unlost_logo</string>
    <string name="night_mode_icn_desc">night_mode_icon</string>
    <string name="night_mode_txt">Night Mode</string>
    <string name="sign_out_btn_txt">Sign Out</string>
    <string name="sign_out_icn_desc">sign_out_icon</string>
</resources>