<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/items_list_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/myitems" />

    <item
        android:id="@+id/item_map_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/map" />

    <item
        android:id="@+id/qr_scan_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_camera_24"
        android:title="@string/scanme" />

    <item
        android:id="@+id/chat_menu_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />

</menu>