<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/conditions"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:gravity = "center_vertical"
        android:text="@string/terms_amp_conditions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/permissions" />

    <Switch
        android:id="@+id/cacheSwitch"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:text="@string/use_cache"
        app:layout_constraintBottom_toTopOf="@+id/nightModeSwitch"
        app:layout_constraintStart_toStartOf="@+id/nightModeSwitch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/permissions"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:gravity = "center_vertical"
        android:text="@string/permissions"
        app:layout_constraintBottom_toTopOf="@+id/conditions"
        app:layout_constraintStart_toStartOf="@+id/conditions"
        app:layout_constraintTop_toBottomOf="@+id/nightModeSwitch" />

    <Switch
        android:id="@+id/nightModeSwitch"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:text="@string/night_mode"
        app:layout_constraintBottom_toTopOf="@+id/permissions"
        app:layout_constraintStart_toStartOf="@+id/permissions"
        app:layout_constraintTop_toBottomOf="@+id/cacheSwitch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/titleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/cacheSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>